--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
+org.gradle.daemon=true
+org.gradle.parallel=true
